--- a/index.html
+++ b/index.html
@@ -1,9 +1,163 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>我的网站</title>
-    </head>
-    <body>
-        <h1>欢迎来到我的网站！</h1>
-    </body>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>PDF查看器</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 20px;
+            background: #f0f0f0;
+        }
+
+        #toolbar {
+            background: #f8f8f8;
+            padding: 10px;
+            border-radius: 4px;
+            margin-bottom: 10px;
+            display: flex;
+            gap: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .toolbar-button {
+            padding: 6px 12px;
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .toolbar-button:hover {
+            background: #f0f0f0;
+        }
+
+        #pdf-container {
+            max-width: 100%;
+            margin: 0 auto;
+            background: white;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+
+        #pdf-canvas {
+            width: 100% !important;
+            height: auto !important;
+        }
+
+        #page-nav {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        #page-number {
+            width: 60px;
+            padding: 4px;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div id="toolbar">
+        <button class="toolbar-button" onclick="downloadPDF()">下载</button>
+        <button class="toolbar-button" onclick="window.print()">打印</button>
+        <div id="page-nav">
+            <button class="toolbar-button" onclick="prevPage()">上一页</button>
+            <input type="number" id="page-number" min="1" value="1">
+            <span id="page-count">/ 1</span>
+            <button class="toolbar-button" onclick="nextPage()">下一页</button>
+        </div>
+        <select class="toolbar-button" onchange="changeZoom(this.value)">
+            <option value="1">100%</option>
+            <option value="1.25">125%</option>
+            <option value="1.5">150%</option>
+            <option value="2">200%</option>
+        </select>
+    </div>
+
+    <div id="pdf-container">
+        <canvas id="pdf-canvas"></canvas>
+    </div>
+
+    <!-- 使用PDF.js库 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script>
+        let currentPage = 1;
+        let pdfDoc = null;
+        let scale = 1;
+
+        // 初始化PDF查看器
+        async function initPDFViewer(url) {
+            pdfDoc = await pdfjsLib.getDocument(url).promise;
+            document.getElementById('page-count').textContent = `/ ${pdfDoc.numPages}`;
+            renderPage(currentPage);
+        }
+
+        // 渲染指定页面
+        async function renderPage(num) {
+            const page = await pdfDoc.getPage(num);
+            const canvas = document.getElementById('pdf-canvas');
+            const ctx = canvas.getContext('2d');
+            
+            const viewport = page.getViewport({ scale });
+            canvas.width = viewport.width;
+            canvas.height = viewport.height;
+
+            await page.render({
+                canvasContext: ctx,
+                viewport: viewport
+            }).promise;
+        }
+
+        // 页面导航
+        function prevPage() {
+            if (currentPage > 1) {
+                currentPage--;
+                updatePage();
+            }
+        }
+
+        function nextPage() {
+            if (currentPage < pdfDoc.numPages) {
+                currentPage++;
+                updatePage();
+            }
+        }
+
+        function updatePage() {
+            document.getElementById('page-number').value = currentPage;
+            renderPage(currentPage);
+        }
+
+        // 缩放控制
+        function changeZoom(newScale) {
+            scale = parseFloat(newScale);
+            renderPage(currentPage);
+        }
+
+        // 下载功能
+        function downloadPDF() {
+            const link = document.createElement('a');
+            link.href = 'C:\Users\19863\Desktop\漱星阁开局指南2025.1.19.pdf'; // 替换为实际PDF地址
+            link.download = 'document.pdf';
+            link.click();
+        }
+
+        // 初始化示例PDF（替换为你的PDF地址）
+        initPDFViewer('C:\Users\19863\Desktop\漱星阁开局指南2025.1.19.pdf');
+
+        // 输入框页码跳转
+        document.getElementById('page-number').addEventListener('change', function() {
+            const newPage = parseInt(this.value);
+            if (newPage > 0 && newPage <= pdfDoc.numPages) {
+                currentPage = newPage;
+                renderPage(currentPage);
+            }
+        });
+
+        // 窗口大小变化时调整
+        window.addEventListener('resize', () => renderPage(currentPage));
+    </script>
+</body>
 </html>
