--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
         // 下载功能
         function downloadPDF() {
             const link = document.createElement('a');
-            link.href = '漱星阁开局指南2025.1.19.pdf'; // 替换为实际PDF地址
+            link.href = 'https://github.com/13169642611chen/DongGuang/blob/38ced69537682a9d125a4e251af63abcc13aa7ae/%E6%BC%B1%E6%98%9F%E9%98%81%E5%BC%80%E5%B1%80%E6%8C%87%E5%8D%972025.1.19.pdf'; // 替换为实际PDF地址
             link.download = 'document.pdf';
             link.click();
         }
 
         // 初始化示例PDF（替换为你的PDF地址）
-        initPDFViewer('漱星阁开局指南2025.1.19.pdf');
+        initPDFViewer('https://github.com/13169642611chen/DongGuang/blob/38ced69537682a9d125a4e251af63abcc13aa7ae/%E6%BC%B1%E6%98%9F%E9%98%81%E5%BC%80%E5%B1%80%E6%8C%87%E5%8D%972025.1.19.pdf');
 
         // 输入框页码跳转
         document.getElementById('page-number').addEventListener('change', function() {
