--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <script>
         // 配置参数
         const config = {
-            pdfUrl: 'https://github.com/13169642611chen/DongGuang/blob/main/%E6%BC%B1%E6%98%9F%E9%98%81%E5%BC%80%E5%B1%80%E6%8C%87%E5%8D%972025.1.19.pdf', // 修改为你的PDF地址
+            pdfUrl: '漱星阁开局指南2025.1.19.pdf', // 修改为你的PDF地址
             defaultScale: 1,
             maxCacheSize: 5, // 缓存最近5页
             dpr: window.devicePixelRatio || 1
