--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>高清PDF阅读器</title>
+    <a href="漱星阁开局指南2025.1.19.pdf">链接文本</a>
     <style>
         :root {
             --toolbar-bg: #f8f9fa;
