--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- 页面内容从这里开始 -->
 
-    <a href=""漱星阁开局指南2025.1.19.pdf"">点击打开</a >
+    <a href="漱星阁开局指南2025.1.19.pdf">点击打开</a >
 
 
 </body>
