--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- 页面内容从这里开始 -->
 
-    <a href="漱星阁开局指南2025.1.19.pdf">点击打开</a >
+    <a href="https://github.com/13169642611chen/DongGuang/blob/46de82caf6d5cf887899004cad09271cb8c5e8be/%E6%BC%B1%E6%98%9F%E9%98%81%E5%BC%80%E5%B1%80%E6%8C%87%E5%8D%972025.1.19.pdf">点击打开</a >
 
 
 </body>
