--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>网页标题</title>
-</head>
-<body>
-    <!-- 页面内容从这里开始 -->
-
-    <a href="https://github.com/13169642611chen/DongGuang/blob/46de82caf6d5cf887899004cad09271cb8c5e8be/%E6%BC%B1%E6%98%9F%E9%98%81%E5%BC%80%E5%B1%80%E6%8C%87%E5%8D%972025.1.19.pdf">点击打开</a >
-
-
-</body>
-</html>
+<a href="漱星阁开局指南2025.1.19.pdf" target="_blank">PDF.</a>
